# chrysoberyl

./: .gitignore  .travis.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
example/: filter-sample.bash  filter.sh
res/: filter.bash
res/config/: default.conf
res/dot.config/script/: export.sh  go-page.sh  lib.sh  load-session.sh  open-dialog.sh  open-directory-dialog.sh  open-file-dialog.sh  pdf-index.sh  save-session.sh  shell.sh
res/os/arch-linux/: PKGBUILD  chrysoberyl.desktop
res/script/: lib.sh  pdf-index.sh  shell.sh
res/x/: chrysoberyl.desktop
src/: app.rs  app_path.rs  archive.rs  buffer_cache.rs  cache.rs  chainer.rs  cherenkov.rs  chrysoberyl.rs  clipboard.rs  color.rs  command.rs  command_line.rs  completer.rs  config.rs  constant.rs  controller.rs  counter.rs  editor.rs  entry.rs  entry_filter.rs  entry_image.rs  error_channel.rs  errors.rs  events.rs  expandable.rs  expander.rs  file_extension.rs  filer.rs  filter.rs  filter_expression.rs  filterable_vec.rs  fragile_input.rs  from_macro.rs  gtk_utils.rs  gtk_wrapper.rs  gui.rs  history.rs  http_cache.rs  image.rs  image_buffer.rs  (+42 more)
src/app/: error_loop_detector.rs  info.rs  mod.rs  on_events.rs
src/cherenkov/: eye_detector.rs  fill.rs  mod.rs  modified.rs  nova.rs
src/chry_errors/: mod.rs
src/completion/: definition.rs  gui.rs  history.rs  mod.rs  path.rs
src/controller/: fifo.rs  file.rs  mod.rs  stdin.rs  unix_socket.rs
src/entry/: image.rs  info.rs  mod.rs
src/entry/filter/: expression.rs  info.rs  mod.rs  parser.rs  resolution.rs  writer.rs
src/error/: mod.rs
src/errors/: mod.rs
src/gui/: mod.rs
src/gui/completion/: mod.rs  parser.rs
src/logger/: error.rs  file.rs  macros.rs  memory.rs  mod.rs  stdout.rs
src/mapping/: event_mapping.rs  input_mapping.rs  key_mapping.rs  mod.rs  mouse_mapping.rs  operation_mapping.rs  region_mapping.rs  unified_mapping.rs  wheel_mapping.rs
src/mruby/: mod.rs
src/operation/: mod.rs  option.rs  parser.rs  utils.rs
src/option/: common.rs  impls.rs  mod.rs  user.rs  user_switch.rs
src/paginator/: mod.rs  test.rs  values.rs
src/poppler/: index.rs  mod.rs  sys.rs  util.rs
src/remote_cache/: curl_options.rs  db.rs  mod.rs
src/shorter/: mod.rs  test.rs
src/static/: default.chry  default.css  operations.txt  options.txt
src/text_format/: mod.rs
src/util/: common.rs  file.rs  mod.rs  num.rs  path.rs  pom.rs  shell.rs  string.rs  time.rs
