[package]
name = "chrysoberyl"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
build = "build.rs"
license-file = "LICENSE"
readme = "README.md"
description = "(Remote)?(PDF|Image|Archive) Viewer"
repository = "http://github.com/anekos/chrysoberyl"

[[bin]]
name = "chrysoberyl"
doc = false

[features]
poppler_lock = []

[dependencies]
app_dirs = "*"
argparse = "*"
atty = "*"
cairo-sys-rs = "0.5.0"
closet = "*"
cmdline-parser = "*"
css-color-parser = "*"
curl = "*"
encoding = "*"
env_logger = "*"
filetime = "*"
gdk = "*"
gdk-pixbuf = "*"
gdk-sys = "*"
gio-sys = "*"
glib = "*"
glib-sys = "*"
globset = "*"
gobject-sys = "*"
immeta = "*"
lazy_static = "*"
libarchive = "*"
libarchive3-sys = "*"
libc = "*"
log = "*"
lru-cache = "*"
maplit = "*"
md5 = "*"
mkstemp-rs = "*"
mrusty = "*"
natord = "*"
num_cpus = "*"
onig = "*"
pom = "1.0"
rand = "*"
readline = "*"
regex = "*"
sha2 = "*"
shell-escape = "*"
shellexpand = "*"
time = "*"
tldextract = "*"
url = "*"

# https://github.com/gtk-rs/gtk/blob/master/Cargo.toml
[dependencies.gtk]
version = "0.3"
features = ["v3_22"]

[dependencies.cairo-rs]
version = "*"
features = ["png"]

[dependencies.ctrlc]
version = "*"
features = ["termination"]

[build-dependencies]
pkg-config = "*"
vergen = "*"
