[package]
name = "chrysoberyl"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
build = "build.rs"
license-file = "LICENSE"
readme = "README.md"
description = "(Remote)?(PDF|Image|Archive) Viewer"
repository = "http://github.com/anekos/chrysoberyl"
edition = "2018"

[[bin]]
name = "chrysoberyl"
doc = false

[features]
poppler_lock = []

[dependencies]
apng-encoder = "0.3.0"
app_dirs = "1.2.1"
argparse = "0.2.2"
atty = "0.2.14"
bytes = "0.4.12"
cairo-sys-rs = "0.7.0"
closet = "0.2.2"
cmdline-parser = "0.1.0"
crossbeam = "0.4.1"
css-color-parser = "0.1.2"
curl = "0.4.25"
dirs = "1.0.5"
encoding = "0.2.33"
enum-iterator = "0.3.1"
enum-iterator-derive = "0.3.1"
enum_primitive = "0.1.1"
env_logger = "0.6.2"
failure = "0.1.6"
filetime = "0.2.8"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
gdk-sys = "0.7.0"
gif = "0.10.3"
gio-sys = "0.7.0"
glib = "0.6.1"
glib-sys = "0.7.0"
globset = "=0.4.4"
gobject-sys = "0.7.0"
gtk-sys = "0.7.0"
lazy_static = "1.4.0"
libarchive = "0.1.1"
libarchive3-sys = "0.1.2"
libc = "0.2.66"
log = "0.4.8"
lru = "0.7.1"
maplit = "1.0.2"
marksman_escape = "0.1.2"
md5 = "0.7.0"
mkstemp-rs = "1.0.0"
natord = "1.0.9"
notify = "4.0.15"
num = "0.2.1"
num_cpus = "1.12.0"
onig = "5.0.0"
openssl = { version = "0.10.28", features = ["vendored"] }
pom = "1.1.0"
rand = "0.5.6"
regex = "1.3.4"
rusoto_core = "0.42.0"
rusoto_rekognition = "0.42.0"
rustyline = "5.0.6"
sha2 = "0.8.1"
shell-escape = "0.1.4"
shellexpand = "1.1.1"
time = "0.1.42"
tldextract = "0.5.1"
url = "1.7.2"
uuid = {version = "0.8.1", features = ["v4"]}
uuid_to_pokemon = "0.3.1"
xml-rs = "0.8.0"

[dependencies.image-meta]
git = "https://github.com/anekos/image-meta"
rev = "c78dedb80dc29d7ed984a14303d99ece62f505f2"

# https://github.com/gtk-rs/gtk/blob/master/Cargo.toml
[dependencies.gtk]
version = "0.5.0"
features = ["v3_22_30"]

[dependencies.cairo-rs]
version = "0.5.0"
features = ["png"]

[dependencies.ctrlc]
version = "3.1.3"
features = ["termination"]

[build-dependencies]
pkg-config = "0.3.17"
vergen = "2.1.3"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[patch.crates-io]
fragile = { path = "vendor/fragile-0.3.0" }
